--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-matplotlib==3.3.4
+#matplotlib==3.3.4
 opencv-python==4.5.1.48
 pandas==1.1.5
 scipy==1.5.4
-SimpleITK==2.1.1
+SimpleITK==2.0.2
 numpy==1.19.5
 scikit-image==0.17.2
 gdown
